[package]
name = "geomify"
version = "0.1.0"
authors = ["phil <phil.j.ellison@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.21"
log = "0.4.6"
rand = "0.7"
simplelog = "0.6"
structopt = "0.2"
